--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -9,7 +9,7 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
-    color: #444;
+    color: #000;
   }
 
   header {
@@ -24,11 +24,11 @@
   h6,
   strong,
   b {
-    color: #222;
+    color: #000;
   }
 
   a {
-    color: #3273dc;
+    color: #6699cc;
     /*color: #ff5e6c;*/
   }
 
@@ -114,7 +114,7 @@
   }
 
   .errorlist {
-    color: #eba613;
+    color: #ffcc33;
     font-size: small;
   }
 
@@ -133,13 +133,13 @@
   }
 
   ul.blog-posts li a:visited {
-    color: #8b6fcb;
+    color: #ffcc33;
   }
 
   @media (prefers-color-scheme: dark) {
     body {
-      background-color: #333;
-      color: #ddd;
+      background-color: #000;
+      color: #fff;
     }
 
     h1,
@@ -150,11 +150,11 @@
     h6,
     strong,
     b {
-      color: #eee;
+      color: #fff;
     }
 
     a {
-      color: #8cc2dd;
+      color: #6699cc;
     }
 
     code {
