cleanup add blot

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,4 +1,5 @@
 <style>
+  #post-meta{ display:none; }
   body {
     font-family: Verdana, sans-serif;
     margin: auto;
@@ -29,6 +30,7 @@
 
   a {
     color: #6699cc;
+    text-decoration: none;
     /*color: #ff5e6c;*/
   }
 
