defining header styles bear

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -17,7 +17,15 @@
     padding-bottom: 15px;
   }
 
-  h1,
+  h1 {
+    font-size: 1.5625rem;
+    line-height: 36px;
+    font-weight: bold;
+    margin-top: 24px; 
+    margin-bottom: 24px; 
+    color: #ffcc33;
+  }
+
   h2,
   h3,
   h4,
@@ -26,6 +34,13 @@
   strong,
   b {
     color: #000;
+  }
+
+  /* headline is post date title */
+
+  headline {
+    color: #ffcc33;
+    text-decoration: none;
   }
 
   a {
