--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,7 +1,15 @@
 <style>
   #post-meta{ display:none; }
+
+html {
+    font-family: 'Plex Sans';
+    font-size: 18px;
+    line-height: 1.4;
+    text-rendering: optimizeLegibility;
+}
+
   body {
-    font-family: Verdana, sans-serif;
+    /* font-family: Verdana, sans-serif; */
     margin: auto;
     padding: 20px;
     max-width: 720px;
