--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,15 +1,12 @@
 <style>
   #post-meta{ display:none; }
 
-html {
+  body {
+    /* font-family: Verdana, sans-serif; */
     font-family: 'Plex Sans';
     font-size: 18px;
     line-height: 1.4;
     text-rendering: optimizeLegibility;
-}
-
-  body {
-    /* font-family: Verdana, sans-serif; */
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -17,7 +14,7 @@ html {
     background-color: #fff;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    line-height: 1.5;
+    /* line-height: 1.5; */
     color: #000;
   }
 
