--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -3,7 +3,7 @@
 
   body {
     /* font-family: Verdana, sans-serif; */
-    font-family: 'Plex Sans';
+    font-family: 'IBM Plex Sans';
     font-size: 18px;
     line-height: 1.4;
     text-rendering: optimizeLegibility;
@@ -164,7 +164,14 @@
       color: #fff;
     }
 
-    h1,
+    h1 {
+      font-size: 1.5625rem;
+      line-height: 36px;
+      font-weight: bold;
+      margin-top: 24px; 
+      margin-bottom: 24px; 
+      color: #ffcc33;
+    }
     h2,
     h3,
     h4,
